crates/core-executor/src/tests/sql/commands/snapshots/unpivot/query_unpivot_partial_columns.snap
---
source: crates/core-executor/src/tests/sql/commands/unpivot.rs
description: "\"SELECT *\n  FROM monthly_sales\n    UNPIVOT (sales FOR month IN (jan, mar))\n  ORDER BY empid;\""
info: "Setup queries: CREATE OR REPLACE TABLE monthly_sales(\n  empid INT,\n  dept TEXT,\n  jan INT,\n  feb INT,\n  mar INT,\n  apr INT); INSERT INTO monthly_sales VALUES\n  (1, 'electronics', 100, 200, 300, 100),\n  (2, 'clothes', 100, 300, 150, 200),\n  (3, 'cars', 200, 400, 100, 50),\n  (4, 'appliances', 100, NULL, 100, 50);"
---
Ok(
    [
        "+-------+-------------+-----+-----+-------+-------+",
        "| empid | dept        | feb | apr | month | sales |",
        "+-------+-------------+-----+-----+-------+-------+",
        "| 1     | electronics | 200 | 100 | JAN   | 100   |",
        "| 1     | electronics | 200 | 100 | MAR   | 300   |",
        "| 2     | clothes     | 300 | 200 | JAN   | 100   |",
        "| 2     | clothes     | 300 | 200 | MAR   | 150   |",
        "| 3     | cars        | 400 | 50  | JAN   | 200   |",
        "| 3     | cars        | 400 | 50  | MAR   | 100   |",
        "| 4     | appliances  |     | 50  | JAN   | 100   |",
        "| 4     | appliances  |     | 50  | MAR   | 100   |",
        "+-------+-------------+-----+-----+-------+-------+",
    ],
)
