crates/core-executor/src/tests/sql/commands/snapshots/unpivot/query_unpivot_with_join.snap
---
source: crates/core-executor/src/tests/sql/commands/unpivot.rs
description: "\"SELECT e.empid, e.dept, u.month, u.sales\n  FROM monthly_sales e\n  JOIN (\n    SELECT empid, month, sales\n    FROM monthly_sales\n    UNPIVOT (sales FOR month IN (jan, feb, mar, apr))\n  ) u ON e.empid = u.empid\n  WHERE u.sales > 200\n  ORDER BY e.empid, u.month;\""
info: "Setup queries: CREATE OR REPLACE TABLE monthly_sales(\n  empid INT,\n  dept TEXT,\n  jan INT,\n  feb INT,\n  mar INT,\n  apr INT); INSERT INTO monthly_sales VALUES\n  (1, 'electronics', 100, 200, 300, 100),\n  (2, 'clothes', 100, 300, 150, 200),\n  (3, 'cars', 200, 400, 100, 50),\n  (4, 'appliances', 100, NULL, 100, 50);"
---
Ok(
    [
        "+-------+-------------+-------+-------+",
        "| empid | dept        | month | sales |",
        "+-------+-------------+-------+-------+",
        "| 1     | electronics | MAR   | 300   |",
        "| 2     | clothes     | FEB   | 300   |",
        "| 3     | cars        | FEB   | 400   |",
        "+-------+-------------+-------+-------+",
    ],
)
